--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "axios": "^1.4.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
+    "pinia": "^2.1.3",
+    "view-ui-plus": "^1.3.14",
+    "vue": "^3.2.47",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "eslint": "^8.42.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-vue": "^9.14.1",
+    "prettier": "2.8.8",
     "vite": "^4.3.9"
   }
 }
