--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "eslint": "^8.42.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^9.14.1",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "prettier": "2.8.8",
     "vite": "^4.3.9"
   }
